--- a/components/svg.html
+++ b/components/svg.html
@@ -1,5 +1,5 @@
-<section>
-    <svg viewBox="0 0 500 1000"
+<section >
+    <svg class="svg__shapes" viewBox="0 0 500 1000"
         xmlns="http://www.w3.org/2000/svg" version="1.1">
 
     <rect  id="rectangle" x="-100" y="-100" width="250" height="200"
