:sparkles: D3 Spike Maps

--- a/components/homework2.html
+++ b/components/homework2.html
@@ -1,8 +1,7 @@
 <h1>Hello</h1>
 
-    <!-- <svg id="map" class="svg__map"></svg> -->
-
+<svg id="map" class="svg__map"></svg>
 
 <script>
-initD3GunMap()
+    initD3GunMap()
 </script>
