:sparkles: D3 Maps with Bars and Chloropeth

--- a/components/homework2.html
+++ b/components/homework2.html
@@ -1,6 +1,36 @@
-<h1>Hello</h1>
+<h1 id="hello">Hello</h1>
 
 <svg id="map" class="svg__map"></svg>
+
+<div id="svgs">
+    <object id="man" type="image/svg+xml" data="../resource/man.svg">
+        Your browser does not support SVG
+    </object>
+    <object id="female" type="image/svg+xml" data="../resource/girl.svg">
+        Your browser does not support SVG
+    </object>
+    <object
+        id="oldMan"
+        type="image/svg+xml"
+        data="../resource/grandfather-silhouette.svg"
+    >
+        Your browser does not support SVG
+    </object>
+    <object
+        id="oldFemale"
+        type="image/svg+xml"
+        data="../resource/grandmother-silhouette.svg"
+    >
+        Your browser does not support SVG
+    </object>
+    <object
+        id="teens"
+        type="image/svg+xml"
+        data="../resource/sister-and-brother.svg"
+    >
+        Your browser does not support SVG
+    </object>
+</div>
 
 <script>
     initD3GunMap()
