:sparkles: D3 Maps with on select state

--- a/components/homework2.html
+++ b/components/homework2.html
@@ -2,25 +2,11 @@
 
 <svg id="map" class="svg__map"></svg>
 
-<div id="svgs">
+<div id="svgs" class="svg__container">
     <object id="man" type="image/svg+xml" data="../resource/man.svg">
         Your browser does not support SVG
     </object>
     <object id="female" type="image/svg+xml" data="../resource/girl.svg">
-        Your browser does not support SVG
-    </object>
-    <object
-        id="oldMan"
-        type="image/svg+xml"
-        data="../resource/grandfather-silhouette.svg"
-    >
-        Your browser does not support SVG
-    </object>
-    <object
-        id="oldFemale"
-        type="image/svg+xml"
-        data="../resource/grandmother-silhouette.svg"
-    >
         Your browser does not support SVG
     </object>
     <object
@@ -30,6 +16,17 @@
     >
         Your browser does not support SVG
     </object>
+    <object
+        id="young"
+        class="young"
+        type="image/svg+xml"
+        data="../resource/kids-child.svg"
+    >
+        Your browser does not support SVG
+    </object>
+</div>
+<div class="svg__container">
+    <svg id="svg-icon-legend"></svg>
 </div>
 
 <script>
