--- a/css/style.css
+++ b/css/style.css
@@ -207,10 +207,18 @@ nav {
 #svgs > object {
     width: 5rem;
     height: 6rem;
+    margin: 10px;
 }
 
-#svgs > object > svg {
-    fill: red;
+.young {
+    height: 4rem !important;
+}
+
+.svg__container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 2rem;
 }
 
 @keyframes rectangle {
