--- a/css/style.css
+++ b/css/style.css
@@ -193,7 +193,7 @@ nav {
 .legend {
     position: absolute;
     left: 2rem;
-    top: 20rem;
+    top: 50rem;
 }
 
 .rectangle {
@@ -218,6 +218,22 @@ nav {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 2rem;
+}
+
+fieldset {
+    margin: 20px;
+    max-width: 400px;
+}
+label > input[type='radio'] + * {
+    display: inline-block;
+    padding: 0.5rem 1rem;
+}
+label > span {
+    font-size: medium;
+}
+
+.header-vis {
     margin: 2rem;
 }
 
