:pen: Adding disclaimer

--- a/components/homework2.html
+++ b/components/homework2.html
@@ -61,6 +61,16 @@
 </div>
 
 <div class="header-vis">
+    <h3>Disclaimer</h3>
+    <ul>
+        <li>The data visualized here is for the year 2012 - 2013</li>
+        <li>
+            Gun rates visualized here were not normalized based on population.
+        </li>
+    </ul>
+</div>
+
+<div class="header-vis">
     <h3>Instructions:</h3>
     <ul>
         <li>Select the desired view using the radio buttons</li>
